[tool.poetry]
name = "selkov_brain_games"
version = "0.2.0"
description = ""
authors = ["Alexei Selkov <a@selkov.ru>"]
packages = [
	{ include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.7"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
pylint = "^2.4.4"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

